--- a/location.html
+++ b/location.html
@@ -20,7 +20,7 @@
     }
     map = new google.maps.Map(document.getElementById("map_canvas"), myOptions);
 	codeAddress("上海钦州路100号");
-	
+	codeAddress("上海延吉一村");
   }
  
   function codeAddress(address) {
@@ -40,10 +40,6 @@
 </script> 
 </head> 
 <body onload="initialize()"> 
-  <div> 
-    <input id="address" type="textbox" value="Sydney, NSW"> 
-    <input type="button" value="Geocode" onclick="codeAddress()"> 
-  </div> 
 <div id="map_canvas" style="height:90%;top:30px"></div> 
 </body> 
 </html> 
