--- a/location.html
+++ b/location.html
@@ -10,6 +10,19 @@
 <script type="text/javascript"> 
 	var company = [];
 	company.push({
+		title : "中国科学院上海药物研究所",
+		address : "上海市祖冲之路555号",
+		instruments : [{
+			pic : "./images/shanghaimedical_1.jpg",
+			name : "核磁共振仪",
+			link : "http://eshare.sgst.cn/equipment/201101/t20110111_515433.htm"
+		},{
+			pic : "./images/shanghaimedical_2.jpg",
+			name : "外周骨定量断层扫描仪",
+			link : "http://eshare.sgst.cn/equipment/201101/t20110111_515578.htm"
+		}]
+	});
+	company.push({
 		title : "华东理工大学",
 		address : "上海市梅陇路130号",
 		instruments : [{
@@ -22,6 +35,7 @@
 			link : "http://eshare.sgst.cn/equipment/201101/t20110111_514974.htm"
 		}]
 	});
+	var markeastchina;//华东理工
   var geocoder;
   var map;
   function initialize() {
@@ -53,6 +67,9 @@
 		geocoder.geocode( { 'address': address}, function(results, status) {
 		  if (status == google.maps.GeocoderStatus.OK) {
 			map.setCenter(results[0].geometry.location);
+			if(address=="上海市梅陇路130号"){
+				markeastchina = results[0].geometry.location;
+			}
 			var marker = new google.maps.Marker({
 				map: map, 
 				position: results[0].geometry.location,
@@ -75,9 +92,17 @@
 			infowindow.open(map,marker);
 		});
 	}  
+	function centereastchina(){
+		if(markeastchina){
+			map.setCenter(markeastchina);
+		}
+	}
 </script> 
 </head> 
 <body onload="initialize()"> 
+<div>
+	<input type="button" value="定位到华东理工" onclick="centereastchina()"/>
+</div>
 <div id="map_canvas" style="height:90%;top:30px"></div> 
 </body> 
 </html> 
